# robot_social_system_based_on_emotion_need_and_behavior

./: .gitignore  README.md  ReadMe  social_system.workspace  social_system.workspace.user.4.8-pre1
arm/arm_control/include/: ArmsActionManager.h
interface_sim/: CMakeLists.txt  package.xml  sim.cpp
interface_sim/include/: cfg.cfg
interface_sim/launch/: interface_sim_cfg.launch
interface_sim/msg/: need_msg.msg
qt界面备份，复制到ws的根目录下/: social_system.workspace.user.21
social_msg/: CMakeLists.txt  新bhvPara.msg
social_msg/msg/: Arms.msg  Emotion.msg  Gaze.msg  Legs.msg  Speech.msg  attitude_parameter.msg  behavior_msg.msg  bhvIssue.msg  bhvPara.msg  bhvQueue.msg  need_msg.msg  perception_msg.msg  person_emotion_assessment_list.msg
social_msg/msg/2023无用msg备份/: Legs.msg  bhvGet.msg  need_compare.msg
social_msg/msg/BehaviorModule/: Emotion.msg  bhvReply.msg
social_msg/msg/EmotionModule/: need_satisfy_msg.msg
social_msg/msg/OtherProject/: perception_msg.msg
social_msg/msg/无用/: NeedList.msg  person_emotion_assessment_list.msg
social_system/behavior_module/: CMakeLists.txt  package.xml
social_system/behavior_module/msg/: Arms.msg  Speech.msg  bhvIssue.msg  bhvPara.msg  bhvReply.msg
social_system/behavior_module/src/: all_test_node.cpp  dealing_node (修改arm call).cpp  dealing_node.cpp  dealing_node_12.28.cpp  dealing_node_513.cpp  pub_node.cpp  test_node.cpp  可用dealing_node.cpp  新dealing_node.cpp  编写日志.txt
social_system/buleteeth_demo/: CMakeLists.txt  package.xml
social_system/buleteeth_demo/include/robot_platform/: publish.h  recall.h
social_system/buleteeth_demo/src/: main.cpp
social_system/emotion_module/: CMakeLists.txt  package.xml
social_system/emotion_module/emotion_module/: README.md
social_system/emotion_module/emotion_module/scripts/: Data_processing.py  Emotion_engine.py  main.py
social_system/emotion_module/emotion_module/test/: perception_talker.py
social_system/emotion_module/launch/: test_talkers.launch
social_system/emotion_module/msg/: robot_emotion.msg
social_system/emotion_module/scripts/: Affective_mode_new.py  Data_processing.py  Emotion_engine.py  Image_talker.py  emotion_param.csv  excel.py  main.py  need_satisfy (copy).csv  need_satisfy.csv  sentiment.py  test.csv  test.py  test.xlsx  visualize_3d.py
social_system/emotion_module/scripts/csv/: emotion_param.csv  need_satisfy.csv  personality.csv
social_system/emotion_module/test/: attitude_talker.py  caculate_test.py  need_satisfy_talker.py  perception_talker.py  robot_status.py
social_system/need_module/: CMakeLists.txt  main.py  package.xml
social_system/need_module/cfg/: DynamicParam.cfg  TaskNeed.yaml
social_system/need_module/core/: need_model.cpp  need_model_thread.cpp  perception_filter.cpp
social_system/need_module/include/need_model/: Adaptive.h  common_include.h  emergency.h  inner_need.h  monitor.h  need_satisfied.h  perception.h  perception_filter.h  prior_need.h  task_need.h  task_paremeter_rw.h
social_system/need_module/script/: .~test(hospital).csv  motivation.csv  test(home).csv  test(hospital).csv  test.csv  test.py
social_system/personality_template/need/: TaskNeed.yaml
social_system/robot_platform/: BluetoothClient.py  CMakeLists.txt  package.xml  serial.c
social_system/robot_platform/include/robot_platform/: Arm_pub.h  Gaze_pub.h  Leg_pub.h  Screen_pub.h  Sounder_pub.h  common_include.h  periodDetection.h  publish.h  recall (年前视频,准备为中期做修改).h  recall.h  serial.h
social_system/robot_platform/msg/BehaviorModule/: Gaze.msg  bhvPara.msg
social_system/robot_platform/msg/OtherProject/: attitude_msg.msg
social_system/robot_platform/robotic_arm/arm/: CMakeLists.txt
social_system/robot_platform/robotic_arm/arm/arm_control/: CMakeLists.txt
social_system/robot_platform/robotic_arm/arm/arm_control/src/: arm_control.cpp
social_system/robot_platform/robotic_arm/arm/rm_65_demo/: CMakeLists.txt
social_system/robot_platform/robotic_arm/arm/rm_msgs/: CMakeLists.txt
social_system/robot_platform/src/: main.cpp
social_system/robot_platform2/: CMakeLists.txt  todo
social_system/robot_platform2/src/: main.cpp
social_system/robotic_arm/arm/arm_control/src/: arm_control.cpp
social_system/robotic_arm/arm/rm_65_description/urdf/: camera_sensors.gazebo.xacro  rm_65.urdf_old.xacro  rm_65_flange.urdf.xacro  rm_65_flange_with_d435i_with_tracer.urdf.xacro  rm_65_with_d435i.urdf.xacro  rm_65_with_d435i_with_tracer.urdf.xacro  rm_65_with_turtle.urdf.xacro  yixiuge_d435i.xacro
social_system/robotic_arm/arm/rm_65_moveit_config/config/: controllers_gazebo.yaml
social_system/robotic_arm/arm/rm_65_moveit_config/launch/: move_group.launch  moveit_planning_execution.launch  planning_context.launch  sensor_manager.launch.xml
social_system/robotic_arm/arm/rm_gazebo/launch/: arm_65_bringup_moveit.launch  arm_world.launch  test_turtle.launch
social_system/robotic_arm/arm/tracer_description/launch/: tracer_stock.launch
social_system/robotic_arm/arm/tracer_description/meshes/: test.world
social_system/robotic_arm/arm/tracer_description/urdf/: fl_castor.xacro  fr_castor.xacro  rl_castor.xacro  rr_castor.xacro  tracer.gazebo  tracer_v1.xacro  tracer_wheel_1.xacro  (+1 more)
social_system/ros/: CMakeLists.txt  package.xml
visualization/: CMakeLists.txt  package.xml
visualization/include/msg/: common.h  cv2qimage.h  emotion_image.h  main_window.hpp  qnode.hpp
visualization/launch/: interface_sim_cfg.launch  visualization.launch
visualization/msg/: need_compare.msg  need_msg.msg
visualization/resources/: images.qrc  main.qml  social.qrc
visualization/src/: main.cpp  main_window.cpp  qnode.cpp
visualization/ui/: main_window (3rd copy).ui  main_window (4th copy).ui  main_window (5th copy).ui  main_window (another copy).ui  main_window (copy).ui  main_window (中文).ui  main_window (英文).ui  main_window.ui  main_window.ui.autosave  main_window1.ui  main_window2 (copy).ui  main_window2.ui  main_window3 (copy).ui  main_window3.ui  main_window_准备加入方差.ui  main_window_准备自适应大小 (copy).ui  main_window_准备自适应大小.ui  main_window——左侧整合完了.ui  widget.ui
